# ngine

./: .clang-format  .gitmodules  App.cpp  App.h  AppGui.cpp  AppGui.h  CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  ConsoleApp.cpp  ConsoleApp.h  Content.cpp  Content.h  DisplaySettings.cpp  DisplaySettings.h  DroppedAssets.h  Emulator.cpp  Emulator.h  GUIImage.h  ImportAssets.cpp  ImportAssets.h  Libdragon.cpp  Libdragon.h  LibdragonFile.cpp  LibdragonFile.h  LibdragonFont.cpp  LibdragonFont.h  LibdragonImage.cpp  LibdragonImage.h  LibdragonLDtkMap.cpp  LibdragonLDtkMap.h  LibdragonScript.cpp  LibdragonScript.h  LibdragonSound.cpp  LibdragonSound.h  LibdragonTiledMap.cpp  LibdragonTiledMap.h  ProjectBuilder.cpp  ProjectBuilder.h  ProjectSettings.cpp  (+16 more)
.github/workflows/: cmake.yml
cmake/: FindSDL2_ttf.cmake  vcpkg.json
content/: Asset.cpp  Asset.h  AssetReference.h  AssetType.cpp  AssetType.h
imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_custom.cpp  imgui_custom.h  imgui_draw.cpp  imgui_impl_sdl.cpp  imgui_impl_sdlrenderer.cpp  imgui_widgets.cpp
imgui-SFML/: imgui-SFML.cpp
imgui/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialogConfig.h
settings/: AudioMixerSettings.cpp  AudioMixerSettings.h  AudioSettings.cpp  AudioSettings.h  DisplaySettings.cpp  DisplaySettings.h  EngineSettings.cpp  EngineSettings.h  MenuSettings.h  ModulesSettings.cpp  ModulesSettings.h  Project.cpp  Project.h  ProjectSettings.cpp  ProjectSettings.h  ProjectSettingsScreen.h  Scene.cpp  Scene.h
static/: change_scene.s.h.cpp  clang_format.cpp  game.s.h.cpp  gitignore.cpp  main.s.cpp  makefile_custom.mk.cpp  static.h  vscode_c_cpp_properties.cpp
